cmake_minimum_required(VERSION 3.14)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode Fibonacci.cpp 1025_DivisorGame.cpp 5_Longest_Palindromic_Substring.cpp 32_Longest_Valid_Parentheses.cpp test.cpp 44_Wildcard_Matching.cpp 53_Maximum_Subarray.cpp 62_Unique_Paths.cpp 63_Unique_Paths_II.cpp 70_Climbing_Stairs.cpp 64_Minimum_Path_Sum.cpp "72_Edit_Distance.cpp" 61_Rotate_List.cpp 83_Remove_Duplicates_from_Sorted_List.cpp)