cmake_minimum_required(VERSION 3.14)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode Fibonacci.cpp 1025_DivisorGame.cpp 5_Longest_Palindromic_Substring.cpp 32_Longest_Valid_Parentheses.cpp test.cpp 44_Wildcard_Matching.cpp 53_Maximum_Subarray.cpp 62_Unique_Paths.cpp 63_Unique_Paths_II.cpp 70_Climbing_Stairs.cpp 64_Minimum_Path_Sum.cpp "72_Edit_Distance.cpp" 61_Rotate_List.cpp 83_Remove_Duplicates_from_Sorted_List.cpp 206_Reverse_Linked_List.cpp 622_Design_Circular_Queue.cpp 200_Number_of_Islands.cpp 752_Open_the_Lock.cpp 279_Perfect_Squares.cpp 155_Min_Stack.cpp 20_Valid_Parentheses.cpp 739_Daily_Temperatures.cpp 150_Evaluate_Reverse_Polish_Notation.cpp 344_Reverse_String.cpp 24._Swap_Nodes_in_Pairs.cpp 21.Merge_Two_Sorted_Lists.cpp 23.Merge_k_Sorted_Lists.cpp)